--- a/pom.xml
+++ b/pom.xml
@@ -46,36 +46,13 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
         <version>3.3.0</version>
-        <executions>
-          <execution>
-            <phase>verify</phase>
-            <goals>
-              <goal>check</goal>
-              <goal>checkstyle</goal>
-            </goals>
-          </execution>
-        </executions>
         <configuration>
           <configLocation>google_checks.xml</configLocation>
+          <outputFile>${project.build.directory}/checkstyle-result.xml</outputFile>
+          <outputFormat>xml</outputFormat>
           <encoding>UTF-8</encoding>
-          <consoleOutput>true</consoleOutput>
-          <failsOnError>true</failsOnError>
+          <failsOnError>false</failsOnError> 
         </configuration>
-      </plugin>
-
-      <!-- ✅ SpotBugs -->
-      <plugin>
-        <groupId>com.github.spotbugs</groupId>
-        <artifactId>spotbugs-maven-plugin</artifactId>
-        <version>4.7.3.0</version>
-        <executions>
-          <execution>
-            <phase>verify</phase>
-            <goals>
-              <goal>check</goal>
-            </goals>
-          </execution>
-        </executions>
       </plugin>
 
       <!-- ✅ JaCoCo -->
